# rinf

./: .dockerignore  .env.template  .gitattributes  .gitignore  .gitmodules  .pubignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.ZH.md  README.md  analysis_options.yaml  build_pod.sh  compose.yaml  pubspec.yaml  pyproject.toml  requirements.txt  run_build_tool.cmd  run_build_tool.sh  run_rust_tool.cmd  run_rust_tool.sh
build_tool/: Cargo.toml  pubspec.yaml
build_tool/lib/src/: android_environment.dart  artifacts_provider.dart  build_cmake.dart  build_gradle.dart  build_pod.dart  build_tool.dart  builder.dart  crate_hash.dart  environment.dart  options.dart  precompile_binaries.dart  rustup.dart  util.dart  verify_binaries.dart
build_tool/src/: build_android.rs  build_cmake.rs  build_gradle.rs  build_pod.rs  build_tool.rs
build_tool/test/: options_test.dart
connectors/corrosion/test/: CMakeLists.txt  ConfigureAndBuild.cmake  README.md
connectors/corrosion/test/custom_profiles/: CMakeLists.txt
connectors/corrosion/test/custom_profiles/custom_profiles/: CMakeLists.txt
connectors/corrosion/test/gensource/gensource/: .gitignore  CMakeLists.txt
connectors/corrosion/test/multitarget/: CMakeLists.txt
connectors/corrosion/test/output directory/: CMakeLists.txt
documentation/: Dockerfile  README.md  __init__.py  mkdocs.yml  pyproject.toml  server.py
documentation/docs/: .pages  applying-template.md  configuration.md  contribution.md  detailed-techniques.md  error-handling.md  frequently-asked-questions.md  graceful-shutdown.md  index.md  installing-components.md  messaging.md  printing-for-debugging.md  running-and-building.md  rust-resource-api.md  shorthand-command.md  state-management.md  tutorial.md  upgrading.md  writing-code.md
documentation/docs/assets/: preview.apng
documentation/docs/stylesheets/: extra.css
documentation/overrides/: home.html
documentation/source/: __init__.py  applying-template.md  conf.py  configuration.md  contribution.md  detailed-techniques.md  error-handling.md  field-attributes.md  field-types.md  frequently-asked-questions.md  graceful-shutdown.md  index.md  installing-components.md  installing-toolchains.md  introduction.md  messaging.md  printing-for-debugging.md  running-and-building.md  state-management.md  tutorial.md  unit-testing.md  upgrading.md
documentation/source/_static/web_app/: .last_build_id  flutter_bootstrap.js  index.html  main.dart.js  main.dart.js.map  version.json
documentation/source/_templates/: icon_pair.html  landing.html
example/native/bridge_engine/: Cargo.toml  build.rs
example/native/bridge_engine/src/: handler.rs  into_into_dart.rs  macros.rs  thread.rs
example/native/bridge_engine/src/ffi/: mod.rs
example/native/frb_engine/: Cargo.toml
example/native/frb_engine/src/: lib.rs  macros.rs  thread.rs
example/native/hub/: Cargo.toml  build.rs
example/native/hub/protos/: counter.proto
example/native/hub/src/: lib.rs  sample_functions.rs  web_alias.rs  with_request.rs
example/native/sample_crate/: Cargo.toml
example/native/sample_crate/src/: lib.rs  mandelbrot.rs
flutter_ffi_plugin/example/native/hub/: Cargo.toml  build.rs
flutter_ffi_plugin/example/native/sample_crate/: Cargo.toml
flutter_ffi_plugin/template/native/hub/: Cargo.toml
flutter_package/example/native/hub/: Cargo.toml
flutter_package/example/native/sample_crate/: Cargo.toml
flutter_package/src/: CMakeLists.txt  rinf.c
flutter_package/template/native/hub/: Cargo.toml
linux/: CMakeLists.txt  gen_msg.cmake  my_application.cc  rust.cmake  rust_in_flutter_plugin.cc  rust_in_flutter_plugin_private.h
linux/flutter/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugins.cmake
linux/include/rust_in_flutter/: rust_in_flutter_plugin.h
linux/test/: rust_in_flutter_plugin_test.cc
native/: Cargo.toml
native/.cargo/: config.toml.template
native/.native.xcodeproj/: project.pbxproj
native/bridge/: Cargo.toml
native/bridge/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs
native/hub/: Cargo.toml
native/hub/src/: data_model.rs  lib.rs  model.rs  sample_functions.rs  user_action_handler.rs  with_user_action.rs
native/hub/src/bridge/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  mod.rs
native/native.xcodeproj/: project.pbxproj
native/sample_crate/: Cargo.toml
native/sample_crate/src/: lib.rs
native/sample_crate_first/: Cargo.toml
native/sample_crate_first/src/: lib.rs
native/sample_crate_second/: Cargo.toml
native/sample_crate_second/src/: lib.rs
native/sample_feature/: Cargo.toml
native/sample_feature/src/: lib.rs
rust_crate/: Cargo.toml  README.md
rust_crate/src/: channel.rs  common.rs  dependencies.rs  error.rs  externs.rs  interface.rs  interface_os.rs  interface_web.rs  lib.rs  macros.rs  main.rs  shutdown.rs  signal_trait.rs  traits.rs
rust_crate/src/bridge_engine/: handler.rs  into_into_dart.rs  macros.rs  rust2dart.rs  support.rs
rust_crate/src/bridge_engine/ffi/: io.rs  mod.rs  web.rs
rust_crate/src/bridge_engine/wasm_bindgen_src/: transfer.rs  worker.rs
rust_crate/src/engine/: LICENSE  README  handler.rs  into_into_dart.rs  macros.rs  rust2dart.rs  support.rs
rust_crate/src/engine/ffi/: io.rs  mod.rs  web.rs
rust_crate/src/engine/wasm_bindgen_src/: transfer.rs  worker.rs
rust_crate_cli/: Cargo.toml
rust_crate_cli/src/: common.rs  entry.rs  generate.rs  lib.rs  webassembly.rs
rust_crate_cli/src/tool/: common.rs  config.rs  entry.rs  error.rs  generate.rs  mod.rs  server.rs  template.rs  webassembly.rs
rust_crate_cli/template/: Cargo.toml.template
rust_crate_cli/template/native/: README.md
rust_crate_cli/template/native/hub/: Cargo.toml.template
rust_crate_command/: Cargo.toml
rust_crate_command/src/: arguments.rs  common.rs  config.rs  entry.rs  error.rs  generate.rs  lib.rs  parse.rs  template.rs
rust_crate_command/template/: Cargo.toml  Cargo.toml.template
rust_crate_command/template/native/hub/: Cargo.toml
rust_crate_proc/: Cargo.toml
rust_crate_proc/src/: lib.rs
(+540 files in other folders)
