[workspace]
resolver = "3"
# These can depend on each other.
# We need to override `crates.io` to use local paths.
members = ["flutter_package/example/native/*", "rust_crate", "rust_crate_proc"]
# The binary crate doesn't have dependency relationship with others.
# Also, it should have its own `Cargo.lock`.
exclude = ["rust_crate_cli"]

[patch.crates-io]
rinf = { path = "rust_crate" }
rinf_proc = { path = "rust_crate_proc" }
