# Toolbox will get symlinked to project, but it's not part of workspace
[workspace]

[package]
name = "build_tool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "build_tool"
path = "src/build_tool.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0"
semver = "1.0"
