[tool.poetry]
name = "docs"
version = "0.1.0"
description = "Documentations for all Cunarist products"
authors = ["DongHyun Kim <temeddix@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.2"
mkdocs-material = "^9.1.21"
mkdocs-awesome-pages-plugin = "^2.9.1"
mkdocs-glightbox = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
