[tool.poetry]
name = "docs"
version = "0.1.0"
description = "Documentation for Rinf"
authors = ["Cunarist"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.2"
mkdocs-material = "^9.1.21"
mkdocs-awesome-pages-plugin = "^2.9.1"
mkdocs-glightbox = "^0.3.4"
mkdocs-git-revision-date-localized-plugin = "^1.2.2"
