[workspace]
members = ["hub", "sample_crate"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
flutter_rust_bridge = { version = "1.63.1", features = ["worker-single"] }
ctor = "0.1.26"
serde_json = "1.0.93"
once_cell = "1.17.1"
tokio = { version = "1.25.0", features = ["full"] }
