[package]
name = "rinf"
version = "6.14.0"
edition = "2021"
license = "MIT"
description = "Rust for native business logic, Flutter for flexible and beautiful GUI"
repository = "https://github.com/cunarist/rinf"
documentation = "https://rinf.cunarist.com"
rust-version = "1.70"

[features]
rt-multi-thread = ["tokio/rt-multi-thread"]
show-backtrace = ["backtrace"]
bevy = ["bevy_ecs"]

[dependencies]
bevy_ecs = { version = "0.14", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
os-thread-local = "0.1.3"
backtrace = { version = "0.3.69", optional = true }
protoc-prebuilt = "0.3.0"
home = "0.5.9"
which = "6.0.0"
allo-isolate = "0.1.25"
tokio = { version = "1", features = ["rt"] }

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
