[package]
name = "rinf"
version = "7.0.0-beta"
edition = "2021"
license = "MIT"
description = "Rust for native business logic, Flutter for flexible and beautiful GUI"
repository = "https://github.com/cunarist/rinf"
documentation = "https://rinf.cunarist.com"
rust-version = "1.80"

[features]
show-backtrace = ["backtrace"]
bevy = ["bevy_ecs"]

[dependencies]
bevy_ecs = { version = "0.14", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
allo-isolate = "0.1.25"
os-thread-local = "0.1.3"
protoc-prebuilt = "0.3.0"
home = "0.5.9"
which = "6.0.0"
backtrace = { version = "0.3.69", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3.70"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
