[package]
name = "rinf_cli"
version = "7.3.0"
edition = "2024"
license = "MIT"
description = "Rust for native business logic, Flutter for flexible and beautiful GUI"
repository = "https://github.com/cunarist/rinf"
documentation = "https://rinf.cunarist.com"
include = ["/src/", "/template/"]

[[bin]]
name = "rinf"
path = "src/bin/main.rs"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
syn = { version = "2.0.98", features = ["full"] }
quote = "1.0.38"
serde = { version = "1.0.218", features = ["derive"] }
serde_yml = "0.0.12"
serde-reflection = "0.5.0"
serde-generate = "0.29.0"
clap = "4.5.31"
owo-colors = "4.2.0"
include_dir = "0.7.4"
convert_case = "0.8.0"
arboard = "3.4.1"
notify = "8.0.0"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
