[package]
name = "rinf_command"
version = "7.3.0"
edition = "2021"

# Add Clippy rules

[dependencies]
syn = { version = "2.0.98", features = ["full"] }
serde = "1.0.218"
serde_yml = "0.0.12"
serde-reflection = "0.5.0"
quote = "1.0.38"
serde-generate = "0.28.0"
clap = "4.5.31"
owo-colors = "4.2.0"
thiserror = "2.0.11"                              # TODO: Unify error handling mechanism
include_dir = "0.7.4"
