[package]
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Downloaded
once_cell = { workspace = true }
ctor = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
# In workspace
sample_feature = { workspace = true }
