[package]
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Downloaded
flutter_rust_bridge = { version = "1.63.1", features = ["worker-single"] }
ctor = "0.1.26"
serde_json = "1.0.93"
once_cell = "1.17.1"
tokio = { version = "1.25.0", features = ["full"] }
# In workspace
sample_crate = { path = "../sample_crate" }
