[package]
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Downloaded
flutter_rust_bridge = { version = "1.75.0", features = ["worker-single"] }
tokio = { version = "1.28.1", features = ["rt", "sync", "macros", "time"] }
ref_thread_local = "0.1.1"
serde_json = "1.0.93"
rmp-serde = "1.1.1"
# In workspace
sample_crate = { path = "../sample_crate" }
