[package]
name = "bridge_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.11.0"
lazy_static = "1.4.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
allo-isolate = { version = "0.1.18", features = ["zero-copy"] }
libc = "0.2"
threadpool = { version = "1.8.1" }
dart-sys = { version = "4.0.2" }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2.81" }
js-sys = { version = "0.3.60" }
web-sys = { version = "0.3.58", features = [
  "DedicatedWorkerGlobalScope",
  "MessageEvent",
  "MessagePort",
  "ErrorEvent",
  "Blob",
  "BlobPropertyBag",
  "Worker",
  "Url",
  "BroadcastChannel",
] }
