[package]
name = "frb_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.11.0"
anyhow = "1.0.64"
threadpool = "1.8.1"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
log = "0.4"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
allo-isolate = { version = "0.1.18", features = ["zero-copy"] }
libc = "0.2"
parking_lot = { version = "0.12.1" }
threadpool = { version = "1.8.1" }
dart-sys = { version = "4.0.2" }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2.81" }
js-sys = { version = "0.3.60" }
web-sys = { version = "0.3.58", features = [
  "DedicatedWorkerGlobalScope",
  "MessageEvent",
  "MessagePort",
  "ErrorEvent",
  "Blob",
  "BlobPropertyBag",
  "Worker",
  "Url",
  "BroadcastChannel",
] }

[build-dependencies]
cc = "1.0"
build-target = "0.4.0"
