[package]
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
libc = "0.2"
dart-sys = { version = "4.0.2" }
allo-isolate = { version = "0.1.18", features = ["zero-copy"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "time"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2.87" }
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "MessagePort",
    "ErrorEvent",
    "Blob",
    "BlobPropertyBag",
    "Worker",
    "Url",
    "BroadcastChannel",
    "Window",
    "console",
] }

[dependencies]
bytemuck = "1.11.0"
lazy_static = "1.4.0"
tokio = { version = "1.28.2", features = ["sync", "macros"] }
serde = { version = "1.0.164", features = ["derive"] }
rmp-serde = "1.1.1"
sample_crate = { path = "../sample_crate" }
