[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `staticlib` is for iOS and macOS.
# `cdylib` is for all other platforms.
crate-type = ["lib", "cdylib", "staticlib"]

# These are dependencies for non-web platforms.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
libc = "0.2"
dart-sys = { version = "4.0.2" }
allo-isolate = { version = "0.1.18", features = ["zero-copy"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "time"] }

# These are dependencies for the web.
[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2.87" }
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "MessagePort",
    "ErrorEvent",
    "Blob",
    "BlobPropertyBag",
    "Worker",
    "Url",
    "BroadcastChannel",
    "Window",
    "Location",
    "console",
] }
wasmtimer = "0.2.0"

[dependencies]
bytemuck = "1.11.0"
lazy_static = "1.4.0"
tokio = { version = "1.28.2", features = ["sync", "macros"] }
serde = { version = "1.0.164", features = ["derive"] }
rmp-serde = "1.1.1"
sample_crate = { path = "../sample_crate" }
