[package]
name = "sample_crate"
version = "0.1.0"
edition = "2021"

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
machineid-rs = "1.2.4"

[dependencies]
anyhow = "1.0.69"
num = "0.4"
image = "0.24.3"
crossbeam = "0.8"
chrono = { version = "0.4.31", features = ["wasmbind"] }
