[package]
# Do not change the name of this crate.
edition = "2021"
name = "hub"
version = "0.1.0"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
libvips = {path = "../libvips"}
prost = "0.12.3"
rinf = "6.11.1"
sample_crate = {path = "../sample_crate"}
tokio = "1.38.0"
# tokio_with_wasm = "0.4.4"
vips-sys = {path = "../vips-sys"}
wasm-bindgen = "0.2.92"
