[package]
name = "sample_crate"
version = "0.1.0"
edition = "2021"

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
machineid-rs = "1.2.4"

[dependencies]
chrono = "0.4.31"
reqwest = { version = "0.11.23", default-features = false }
image = "0.24.8"
